Style fixes - <a> tags weren't colored blue in md_content - PostPreview title is now wrapped in a <a> tag

--- a/resources/styles/app.pcss
+++ b/resources/styles/app.pcss
@@ -29,6 +29,14 @@ html {
         @apply my-4 font-serif text-justify;
     }
 
+    a {
+        @apply text-blue-700;
+
+        &:hover {
+            @apply text-blue-900;
+        }
+    }
+
     h1 {
         @apply heading text-3xl;
     }
